# curl-perf

./: .gitignore  README.md  pyproject.toml
src/curl_perf/: cli.py  output.py  results.py  runner.py  server.py
src/curl_perf/tools/: __init__.py  base.py  curl.py  httpie.py  py_requests.py  wget.py  xh.py
tests/: test_output.py  test_results.py  test_runner.py  test_server.py  test_tools.py
